--- a/teacherlogin.html
+++ b/teacherlogin.html
@@ -99,9 +99,11 @@ body {
     <div class="logo"></div>
     <div class="login-block">
     <h1>Login</h1>
+    <form action="" method="post" id="" name="">
     <input type="text" value="" placeholder="Enter Teacher's Name" id="username" />
     <input type="password" value="" placeholder="Enter your Password" id="password" />
-    <button>Submit</button>
+    <button type="submit">Submit</button>
+    </form>
 </div>
 </body>
 </html>
