--- a/attendance.html
+++ b/attendance.html
@@ -6,6 +6,7 @@
         <title>Student Attendance</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
+
     body {
 
     line-height: 1.6;
@@ -31,8 +32,8 @@ h1{
 }
 .sheet{
     text-align: center;
+    font-size: 20px;
 }
-
 
 
 .name-col {
@@ -45,13 +46,21 @@ button{
     border: none;
     outline: none;
     float: left;
-    margin: 166px 560px;
+    margin: 166px 565px;
     padding: 10px 40px;
     font-size: 25px;
     color: white;
     cursor: pointer;
     border-radius: 10px;
 }
+input[type=checkbox] {
+    transform: scale(2);
+    -ms-transform: scale(2);
+    -webkit-transform: scale(2);
+    padding: 10px;
+
+}
+
     </style>
 
     </head>
