--- a/section.html
+++ b/section.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Select Section</title>
-	<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/52FF3082-F7A1-B246-B877-1E6A66165649/main.js" charset="UTF-8"></script>
+    <title>Select Section</title
 	<style>
 body {
     background: url('http://eskipaper.com/images/black-background-images-3.jpg') no-repeat fixed center center;
