--- a/attendance.html
+++ b/attendance.html
@@ -73,17 +73,15 @@ input[type=checkbox] {
         <table align="center">
             <thead>
                 <tr>
-                    <th class="name-col">Student Roll. No.</th>
-                    <th>Name</th>
-                    <th>Subject</th>
-                    <th>Attendance</th>
+                    <th class="name-col">Student Roll No.</th>
+                    <th>Student Name</th>
+                    <th>Is Present ?</th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="student">
                     <td class="name-col">6315000</td>
                     <td class="name-col">abc</td>
-                    <td class="name-col">def</td>
                     <td class="attend-col"><input type="checkbox" name=""></td>
                     
                 </tr>
