--- a/section.html
+++ b/section.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Select Section</title
+    <title>Select Section</title>
+	
 	<style>
 body {
     background: url('http://eskipaper.com/images/black-background-images-3.jpg') no-repeat fixed center center;
@@ -70,13 +71,13 @@ a{
 				<center><h1>CSE-2</h1></center>
 				<center><a href="/attendance/?class=cse2">CSE-2 (Complete)</a></center>
 				<br>
-				<center><a href="/attendance/?class=cse2a">CSE-2 (Group A-1)</a></center>
+				<center><a href="/attendance/?class=cse2a">CSE-2 (Group A-3)</a></center>
 				<br>
-				<center><a href="/attendance/?class=cse2b">CSE-2 (Group A-2)</a></center>
+				<center><a href="/attendance/?class=cse2b">CSE-2 (Group A-4)</a></center>
 				<br>
-				<center><a href="/attendance/?class=cse2la">CSE-2 Lab (Group A-1)</a></center>
+				<center><a href="/attendance/?class=cse2la">CSE-2 Lab (Group A-3)</a></center>
 				<br>
-				<center><a href="/attendance/?class=cse2lb">CSE-2 Lab (Group A-2)</a></center>
+				<center><a href="/attendance/?class=cse2lb">CSE-2 Lab (Group A-4)</a></center>
 				</div>
 		</div>
 		</div>
