--- a/index.html
+++ b/index.html
@@ -1,97 +1,139 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>gni</title>
-  <style>
+  <title>Attendance System</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- <link href="css/style.css" rel="stylesheet"> -->
+<style>
+  
 body {
-    background: url('http://eskipaper.com/images/black-background-images-3.jpg') no-repeat fixed center center;
-    background-size: cover;
-}
-.logo {
-    width: 165px;
-    height: 100px;
-    background: url('https://www.gni.edu.in//assets-new/raw/logo.png') no-repeat;
-    margin: 50px auto;
+  background: black;
+  color: #444;
+  font-family: "Open Sans", sans-serif;
 }
 
-#main{
-	width: 100%;
+a {
+  color: #50d8af;
+  transition: 0.5s;
 }
 
-.div1{
-	/*background-color: red ;*/
-	width: 50%;
-	height: 675px;
-	float: left;
-}
-.div2{
-	/*background-color: blue ;*/
-	width: 50%;
-	height: 675px;
-	float: right;
+a:hover, a:active, a:focus {
+  color: #51d8af;
+  outline: none;
+  text-decoration: none;
 }
 
-button{
-	border: none;
-	outline: none;
-	float: left;
-	margin: 36px 250px;
-	padding: 10px 40px;
-	font-size: 25px;
-	color: white;
-	cursor: pointer;
-	border-radius: 10px;
+p {
+  padding: 0;
+  margin: 0 0 30px 0;
 }
 
-.button1{
-	background: -webkit-linear-gradient(top, red, red);
-}
-.button2{
-	background: -webkit-linear-gradient(top, red, red);
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
-p{
-	font-size: 30px;
-	color: #F9A214;
-	margin-left: 225px;
-	margin-top: 100px;
-	padding-top: 100px 210px;
-	font-family: Modern;
+
+#intro {
+  width: 100%;
+  height: 60vh;
+  background: #000;
+  position: relative;
 }
-#cse{
-	color: #F9A214;
-	text-align: center;
-	font-size: 25px;
-	margin-top: 5px;
+
+#intro .intro-content {
+  position: absolute;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
+
+#intro .intro-content h2 {
+  color: #0c2e8a;
+  margin-bottom: 30px;
+  font-size: 64px;
+  font-weight: 700;
+  margin-top: 250px;
+}
+
+#intro .intro-content h2 span {
+  color: #50d8af;
+  text-decoration: underline;
+}
+
+@media (max-width: 767px) {
+  #intro .intro-content h2 {
+    font-size: 34px;
+  }
+}
+
+#intro .intro-content .btn-get-started, #intro .intro-content .btn-projects {
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 2px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+}
+
+#intro .intro-content .btn-get-started {
+  background: #0c2e8a;
+  border: 2px solid #0c2e8a;
+}
+
+#intro .intro-content .btn-get-started:hover {
+  background: none;
+  color: #0c2e8a;
+}
+
+#intro .intro-content .btn-projects {
+  background: #50d8af;
+  border: 2px solid #50d8af;
+}
+
+#intro .intro-content .btn-projects:hover {
+  background: none;
+  color: #50d8af;
+}
+
 
 
 </style>
 </head>
-<body>
 
-<div class="container">
-	<div id="cse">
-		<h1>
-			CSE Department
-		</h1>
-	</div>
-	<div class="logo">
-	</div>
-<div id="main">
-		<div class="div1">
-			<p>Login as Teacher</p>
-			<a href="teacherlogin.html"><button class="button1">login</button></a>
-		</div>
+<body id="body">
 
-		<div class="div2">
-			<p>Login as Student</p>
-			<a href="studentlogin.html"><button class="button2">login</button></a>
-		</div>
-</div>
+  <section id="intro" class="wow fadeIn">
 
-</div>
-		
+    <div class="intro-content">
+      <h2>CSE Department <span><br>Attendane System</span></h2>
+      <div>
+        <a href="teacherlogin.html" class="btn-get-started scrollto">Login as Teacher</a>
+        <a href="studentlogin.html" class="btn-projects scrollto">Login as Student</a>
+      </div>
+    </div>
+
+  </section>
+
 </body>
 </html>
