--- a/feedbackstudent.html
+++ b/feedbackstudent.html
@@ -15,6 +15,7 @@
   width:100%;
   height:100%;
   font-family: 'Roboto Condensed', sans-serif;
+  background-color: #F4B21A;
   
 }
 
@@ -40,7 +41,7 @@ a:hover,a:focus{
 }
 
 #contact{
-  background:#F4B21A;
+  
   color:black;
   padding-bottom:80px;
 }
