--- a/feedback.html
+++ b/feedback.html
@@ -65,20 +65,6 @@ h2 {
     width: 57% !important;
   }
 
-    .1,.2{
-            background-color: #004445;
-            color: white;
-            width: 200px;
-            height: 60px;
-            border-radius: 10px;
-            font-size: 15px;
-        }
-
-        .hidden{
-            display: none;
-        }
-
-
 </style>
   </head>
   <body>
@@ -95,6 +81,10 @@ h2 {
                       <div class="form-group">
                         <h4>Name</h4>
                         <input type="text" class="form-control" id="" placeholder="Enter your Name">
+                      </div>
+                      <div class="form-group">
+                      <h4>Roll No.</h4>
+                        <input type="text" class="form-control" id="" placeholder="If you are student the enter">
                       </div>
                       <div class="form-group">
                         <h4>Email</h4>
@@ -115,18 +105,6 @@ h2 {
             </div>
         </div>
       </section>
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript">
-    $(".button").click(function(e){
-        $(".button").addClass("hidden");
-        $("#div1").removeClass("hidden");
-    });
-    $(".button1").click(function (e) {
-        $('.button').removeClass("hidden");
-        $("#div1").addClass("hidden");
-
-    });
-</script>
 
   </body>
 </html>
