--- a/feedback.html
+++ b/feedback.html
@@ -79,19 +79,19 @@ h2 {
                   <form action="" method="post" id="" name="" class="form-horizontal">
                   <center>
                       <div class="form-group">
-                        <h4>Name</h4>
-                        <input type="text" class="form-control" id="" placeholder="Enter your Name">
+                        <h4><b>Name :</b></h4>
+                        <input type="text" class="form-control" id="" placeholder="Your name...">
                       </div>
                       <div class="form-group">
-                      <h4>Roll No.</h4>
-                        <input type="text" class="form-control" id="" placeholder="If you are student the enter">
+                      <h4><b>Roll Number :</b></h4>
+                        <input type="text" class="form-control" id="" placeholder="Optional, enter your roll number if you are student">
                       </div>
                       <div class="form-group">
-                        <h4>Email</h4>
-                        <input type="email" class="form-control" id="" placeholder="Enter Your Email-id">
+                        <h4><b>Email :</b></h4>
+                        <input type="e-mail" class="form-control" id="" placeholder="Your E-mail...">
                       </div>
                       <div class="form-group ">
-                        <h4>Write your query here</h4>
+                        <h4><b>Your feedback:</b></h4>
                        <textarea  class="form-control" placeholder="Write your Query"></textarea> 
                       </div>
                       <hr>
