--- a/feedback.html
+++ b/feedback.html
@@ -23,7 +23,7 @@
 h1,h2,h3 {
   margin:10 0 35px 0;
   font-family: "Times New Roman", Times, serif;
-  text-transform: uppercase;
+  
   letter-spacing:1px;
 }
 
@@ -84,7 +84,7 @@ h2 {
                       </div>
                       <div class="form-group">
                       <h4><b>Roll Number :</b></h4>
-                        <input type="text" class="form-control" id="" placeholder="Optional, enter your roll number if you are student">
+                        <input type="text" class="form-control" id="" placeholder="Optional">
                       </div>
                       <div class="form-group">
                         <h4><b>Email :</b></h4>
@@ -95,7 +95,7 @@ h2 {
                        <textarea  class="form-control" placeholder="Write your Query"></textarea> 
                       </div>
                       <hr>
-                      <button type="submit" class="btn btn-default button">Send Message</button>
+                      <button type="submit" class="btn btn-default button">Submit</button>
                       </center>
                   </form>
 
