--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Feedback Form</title>
+    <title><i>Feedback Form</i></title>
 
 
     <link href="bootstrap.min.css" rel="stylesheet">
