--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><i>Feedback Form</i></title>
+    <title>Feedback Form</title>
 
 
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@ h2 {
 <section id="contact" class="content-section text-center">
         <div class="contact-section">
             <div class="container">
-              <h2>Feedback</h2>
+              <h2><i>Feedback</i></h2>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   
