--- a/authority.html
+++ b/authority.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Aythorities</title>
+    <title>Authorities</title>
 
 
   <link href="bootstrap.min.css" rel="stylesheet">
