--- a/mhrd.html
+++ b/mhrd.html
@@ -11,7 +11,7 @@
         <title>MHRD</title>
     <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/52FF3082-F7A1-B246-B877-1E6A66165649/main.js" charset="UTF-8"></script></head>
     <body>
-        <nav class="navbar bg-dark navbar-dark navbar-expand-lg navbar navbar-inverse bs-dark">
+        <nav class="navbar bg-dark navbar-dark navbar-expand-lg navbar navbar-expand-sm">
 
             <div class="container">
                 <a class="navbar-brand" href="#">MHRD</a>
